# work_with_phone_numbers

./: .gitignore  LICENSE  README.md  generate_random_phone_numbers.py  pyproject.toml  sort_random_phone_numbers.py  utils.py
