[tool.poetry]
name = "work_with_phone_numbers"
version = "0.1.0"
description = "Scripts to generate a file with shuffled phone numbers and sort these phones back"
authors = ["RandyRomero <a.ya.miheev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
